[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geliver"
version = "0.2.1"
description = "Geliver API SDK (Python)"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

